After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742695 - type to search in preferences: char doesn't appear in search on keypress
type to search in preferences: char doesn't appear in search on keypress
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: preferences
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-10 11:00 UTC by Lasse Schuirmann
Modified: 2015-01-11 04:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bugfix (1.28 KB, patch)
2015-01-10 22:17 UTC, Florian Bäuerle
committed Details | Review
fix #2 (3.11 KB, patch)
2015-01-11 01:16 UTC, Florian Bäuerle
committed Details | Review

Description Lasse Schuirmann 2015-01-10 11:00:38 UTC
Steps to reproduce:
* open preferences
* press 'o'

Expected results:
search box opens with an o in it

Actual results:
search box opens but is empty
Comment 1 Florian Bäuerle 2015-01-10 22:17:37 UTC
Created attachment 294248 [details] [review]
bugfix
Comment 2 Christian Hergert 2015-01-10 22:56:24 UTC
LGTM, pushed.
Comment 3 Lasse Schuirmann 2015-01-11 00:08:10 UTC
Great, one issue though: if I press esc to dismiss the search bar and it just happens that the search bar isn't focused because I browsed the search, the whole dialog gets closed insead of just the search bar. (I'd like the latter behavior better.)
Comment 4 Florian Bäuerle 2015-01-11 01:16:39 UTC
Created attachment 294255 [details] [review]
fix #2

You are right, here is a solution (I admit, the code does not look nice - but it works)

Somehow gtk_search_bar_handle_event does not propagate the event to the searchbar when it is already enabled, this fact makes the code a bit ugly.
Comment 5 Christian Hergert 2015-01-11 02:03:52 UTC
Review of attachment 294255 [details] [review]:

I could see this getting unruly, but I think this feature needs an abstraction upstream in Gtk. So until that happens, I'm okay with this.
Comment 6 Christian Hergert 2015-01-11 03:44:47 UTC
This looks like it fixes 742694 too.