prefs: let search bar handle keypress event

That way the first character typed shows in the search entry.

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=742695

Signed-off-by: Florian <florian.bae@gmail.com>